--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Portafolio Rosales</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
   <link href="unslider/css/unslider.css" rel="stylesheet" type="text/css"/>
   <link href="unslider/css/unslider-dots.css" rel="stylesheet" type="text/css"/>
   <link href="css/animate.min.css" rel="stylesheet" type="text/css"/>
   <link href="css/main.css" rel="stylesheet" type="text/css"/>
+  <noscript></noscript>
   
   
   
@@ -21,26 +21,9 @@
           <li><a href="#me">Conoceme</a></li>
           <li><a href="#habilidades">Mis habilidades</a></li>
           <li><a href="#proyectos">Mis proyectos</a></li>
-          <li><a href="#contacto">Contactame</a></li>
+          <li><a href="#contacto">Contactame					</a></li>
         </ul>
       </nav>
-    </div>
-  </header>
-  <header class="visible-xs">
-    <div role="banner" class="navbar navbar-inverse">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#me">Conoceme</a></li>
-            <li class="dropdown"><a href="#habilidades">Mis habilidades</a></li>
-            <li class="dropdown"><a href="#proyectos">Mis proyectos</a></li>
-            <li class="dropdown"><a href="#contacto">Contactame</a></li>
-          </ul>
-        </div>
-      </div>
     </div>
   </header>
   <div class="content-wrap">
@@ -48,8 +31,9 @@
       <section id="hero">
         <div class="container">
           <div class="row">
-            <div class="hero-banner"><a>ROSALES</a>
-              <p class="text-center">ROSARIO</p>
+            <div class="hero-banner">
+              <canvas></canvas><a>ROSALES</a>
+              <p class="text-center">ROSARIO					</p>
             </div>
           </div>
           <div class="row">
@@ -69,6 +53,10 @@
           </div>
         </div>
       </section>
+      <div class="left_vertical"><span>S</span><span>U</span><span>E</span><span>Ñ</span><span>A</span>
+      </div>
+      <div class="right_vertical"><span>S</span><span>O</span><span>N</span><span>R</span><span>I</span><span>E</span>
+      </div>
         <section id="me">
           <div class="container wow fadeInRight">
             <div class="row">
@@ -122,7 +110,7 @@
               <li style="background-image:url(&quot;img/conoceme/1.jpg&quot;)" class="transparente"><span>DIOS</span></li>
               <li style="background-image:url(&quot;img/conoceme/2.jpg&quot;)" class="transparente"><span>ABUELITA</span></li>
               <li style="background-image:url(&quot;img/conoceme/3.jpg&quot;)" class="transparente"><span>FAMILIA</span></li>
-              <li style="background-image:url(&quot;img/conocem&quot;)" class="transparente"><span>SMILE</span></li>
+              <li style="background-image:url(&quot;img/conoceme/4.png&quot;)" class="transparente"><span>SMILE</span></li>
               <li style="background-image:url(&quot;img/conoceme/5.jpg&quot;)" class="transparente"><span>SINCERA</span></li>
               <li style="background-image:url(&quot;img/conoceme/6.jpg&quot;)" class="transparente"><span>LIBROS</span></li>
               <li style="background-image:url(&quot;img/conoceme/7.jpg&quot;)" class="transparente"><span>ADMINISTRACIÓN</span></li>
@@ -150,8 +138,7 @@
         <div class="habilidades text-center">
           <h2>HABILIDADES PERSONALES</h2>
         </div>
-        <div class="col-md-1 hidden-xs"></div>
-        <div class="col-md-3 col-xs-6">
+        <div class="col-sm-3 col-sm-offset-1">
           <p> <b>Me considero :</b></p>
           <ul>
             <li>
@@ -161,34 +148,33 @@
               <p>Sincera</p>
             </li>
             <li>
-              <p>Perseverante</p>
+              <p>Persistente</p>
             </li>
             <li>
-              <p>Trabajadora							</p>
+              <p>Discreta</p>
             </li>
           </ul>
         </div>
-        <div class="col-md-4 col-xs-6">
+        <div class="col-sm-4">
           <div class="arrow-down"></div><br/>
           <video width="100%" height="100%" autoplay="autoplay" loop="loop" preload="preload" muted="muted">
             <source src="video/lab.mp4" type="video/mp4"/>
           </video>
         </div>
-        <div class="col-md-1 hidden-xs"></div>
-        <div class="col-md-3 hidden-xs">
-          <p> <b>Me consideran :</b></p>
+        <div class="col-sm-3 col-sm-offset-1">
+          <p><b>Me consideran :</b></p>
           <ul>
             <li>
-              <p>Empatica</p>
+              <p>Empática</p>
             </li>
             <li>
-              <p>Generosa</p>
+              <p>Firme</p>
             </li>
             <li>
-              <p>Amigable</p>
+              <p>Optimista</p>
             </li>
             <li>
-              <p>Graciosa	</p>
+              <p>Graciosa</p>
             </li>
           </ul>
         </div>
@@ -201,32 +187,26 @@
               <li class="text-center"><img src="img/habilidades/1.png"/>
                 <p><b>HTML</b></p>
                 <hr/>
-                <p>         </p>
               </li>
-              <li class="text-center"><img src="img/habilidades/2.jpg"/>
+              <li class="text-center"><img src="img/habilidades/2.png"/>
                 <p><b>CSS</b></p>
                 <hr/>
-                <p>         </p>
               </li>
-              <li class="text-center"><img src="img/habilidades/3.jpg"/>
+              <li class="text-center"><img src="img/habilidades/3.png"/>
                 <p><b>JS</b></p>
                 <hr/>
-                <p>         </p>
               </li>
-              <li class="text-center"><img src="img/habilidades/4.jpg"/>
+              <li class="text-center"><img src="img/habilidades/4.png"/>
                 <p><b>Jade</b></p>
                 <hr/>
-                <p>         </p>
               </li>
               <li class="text-center"><img src="img/habilidades/5.jpg"/>
                 <p><b>Sass</b></p>
                 <hr/>
-                <p>         </p>
               </li>
               <li class="text-center"><img src="img/habilidades/6.jpg"/>
                 <p><b>Boostrap</b></p>
                 <hr/>
-                <p>         </p>
               </li>
           </ul>
         </div>
@@ -289,12 +269,13 @@
         <div class="container wow fadeInLeft">
           <div class="row">
             <div class="borde">
-              <div class="bloque">
-                <h1 class="text-center"> <b>Trabaja conmigo</b></h1>
-                <p>Para empezar a trabajar juntos solo debes escribirme un mensaje
+              <div class="bloque text-center">
+                <h1> <b>Trabaja conmigo</b></h1>
+                <p>Para empezar a trabajar juntos solo debes escribir un mensaje.
                   <div class="arrow-down"></div>
                 </p>
-                <p class="text-center"><a href="mailto:rr.rosario.rosales.gmail.com?Subject=Portafolio Rosales"><i class="fa fa-envelope"></i></a></p>
+                <p><a href="mailto:rr.rosario.rosales@gmail.com?Subject=Portafolio Rosales">rr.<span>rosario</span>.rosales@gmail.com</a></p>
+                <p><a href="mailto:rr.rosario.rosales@gmail.com?Subject=Portafolio Rosales"><i class="fa fa-envelope"></i></a></p>
               </div>
             </div>
           </div>
@@ -311,5 +292,6 @@
 <script type="text/javascript" src="unslider/js/unslider-min.js"></script>
 <script src="https://use.fontawesome.com/a81d940a5c.js"></script>
 <script type="text/javascript" src="js/wow.min.js"></script>
+<script type="text/javascript" src="js/canvas.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>new WOW().init();</script>
