Corrección de último momento

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <li style="background-image:url(&quot;img/conoceme/4.png&quot;)" class="transparente"><span>SMILE</span></li>
               <li style="background-image:url(&quot;img/conoceme/5.jpg&quot;)" class="transparente"><span>SINCERA</span></li>
               <li style="background-image:url(&quot;img/conoceme/6.jpg&quot;)" class="transparente"><span>LIBROS</span></li>
-              <li style="background-image:url(&quot;img/conoceme/7.jpg&quot;)" class="transparente"><span>ADMINISTRACIÓN</span></li>
+              <li style="background-image:url(&quot;img/conoceme/7.jpg&quot;)" class="transparente"><span style="font-size:65px">ADMINISTRACIÓN</span></li>
               <li style="background-image:url(&quot;img/conoceme/8.jpg&quot;);background-position:center" class="transparente"><span>SER MEJOR</span></li>
               <li style="background-image:url(&quot;img/conoceme/9.png&quot;)" class="transparente"><span>ROSARIO</span></li>
             </ul>
