--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <li style="background-image:url(&quot;img/conoceme/6.jpg&quot;)" class="transparente"><span>LIBROS</span></li>
               <li style="background-image:url(&quot;img/conoceme/7.jpg&quot;)" class="transparente"><span style="font-size:65px">ADMINISTRACIÓN</span></li>
               <li style="background-image:url(&quot;img/conoceme/8.jpg&quot;);background-position:center" class="transparente"><span>SER MEJOR</span></li>
-              <li style="background-image:url(&quot;img/conoceme/9.png&quot;)" class="transparente"><span>ROSARIO</span></li>
+              <li style="background-image:url(&quot;img/conoceme/9.jpg&quot;);background-position:center;background-size:contain" class="transparente"><span>ROSARIO</span></li>
             </ul>
           </div>
         </div>
@@ -174,7 +174,7 @@
               <p>Optimista</p>
             </li>
             <li>
-              <p>Graciosa</p>
+              <p>Graciosa			</p>
             </li>
           </ul>
         </div>
